fix no img error and random overflow scroll

--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,7 +1,6 @@
 @import '../../../theme.scss';
 
 .layout {
-    width: 100%;
     padding-left: 8px;
 
     display: flex;
